@@ -1,101 +1,0 @@
-#!/bin/sh
-
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-exec_prefix_set=no
-
-cvl_libs="@CVL_LIBS@"
-cvl_cflags="@CVL_CFLAGS@"
-cvl_la_file="@libdir@/libcvl.la"
-
-usage()
-{
-	cat <<EOF
-Usage: cvl-config [OPTIONS]
-Options:
-	[--prefix[=DIR]]
-	[--exec-prefix[=DIR]]
-	[--version]
-	[--libs]
-	[--cflags]
-EOF
-	exit $1
-}
-
-if test $# -eq 0; then
-	usage 1 1>&2
-fi
-
-while test $# -gt 0; do
-  case "$1" in
-  -*=*) optarg=`echo "$1" | sed 's/[-_a-zA-Z0-9]*=//'` ;;
-  *) optarg= ;;
-  esac
-
-  case $1 in
-    --prefix=*)
-      prefix=$optarg
-      if test $exec_prefix_set = no ; then
-	exec_prefix=$optarg
-      fi
-      ;;
-    --prefix)
-      echo_prefix=yes
-      ;;
-    --exec-prefix=*)
-      exec_prefix=$optarg
-      exec_prefix_set=yes
-      ;;
-    --exec-prefix)
-      echo_exec_prefix=yes
-      ;;
-    --version)
-      echo "@VERSION@"
-      exit 0
-      ;;
-    --cflags)
-      echo_cflags=yes
-      ;;
-    --libs)
-      echo_libs=yes
-      ;;
-    --la-file)
-      echo_la_file=yes
-      ;;
-    --help)
-      usage 0
-      ;;
-    *)
-      usage 1 1>&2
-      ;;
-  esac
-  shift
-done
-
-if test "$echo_prefix" = "yes"; then
-    echo $prefix
-fi
-
-if test "$echo_exec_prefix" = "yes"; then
-    echo $exec_prefix
-fi
-
-if test "$echo_cflags" = "yes"; then
-    if test "@includedir@" != "/usr/include" ; then
-      includes="-I@includedir@"
-      for i in $cvl_cflags ; do
-	if test "$i" = "-I@includedir@" ; then
-	  includes=""
-	fi
-      done
-    fi
-    echo $includes $cvl_cflags
-fi
-
-if test "$echo_la_file" = "yes"; then
-    echo ${cvl_la_file}
-fi
-
-if test "$echo_libs" = "yes"; then
-    echo ${cvl_libs}
-fi
