@@ -23,6 +23,10 @@
 #ifndef CVL_VERSION_H
 #define CVL_VERSION_H
 
-#define CVL_VERSION "@VERSION@"
+#define CVL_VERSION "@CVL_VERSION@"
+#define CVL_VERSION_MAJOR @CVL_VERSION_MAJOR@
+#define CVL_VERSION_MINOR @CVL_VERSION_MINOR@
+#define CVL_VERSION_PATCH @CVL_VERSION_PATCH@
+#define CVL_VERSION_NUMBER @CVL_VERSION_NUMBER@
 
 #endif
