@@ -3,7 +3,11 @@ Version 0.0.4 (not yet released):
 - New and improved CVL functionality:
   - New functions cvl_field_array() and cvl_field_const_array() to access the 
     raw array data of a field.
+  - A new AM_LIBCVL macro, defined in cvl.m4. This depends on lib-link.m4 and
+    config.rpath, but it is better than the old AM_PATH_CVL macro.
 - Removed:
+  - The cvl.pc pkg-config file and the cvl-config script used by the replaced
+    AM_PATH_CVL macro. Use AM_LIBCVL instead.
 - Miscellaneous:
 
 Version 0.0.3:
